--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
     </title>
   </head>
   <body>
-    <h1>Craft around the world</h1>
+    <div class="container">
+      <header>
+        <h3>.passion.</h3>
+        <h1>Take Me Surfing</h1>
+        <h2>Surfing locations around Ireland and Spain</h2>
+        <a href="#learn-more" class="">Learn More</a>
+      </header>
+      <footer>
+        Open-sourced on
+        <a
+          href="https://github.com/barty-s/Craft-Project-SheCodesResponsive-AddOn"
+          target="_blank"
+          class=""
+          >GitHub</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
