Added footer text and styling

--- a/index.html
+++ b/index.html
@@ -18,19 +18,66 @@
   <body>
     <div class="container">
       <header>
-        <h3>.passion.</h3>
+        <h3>·passion·</h3>
         <h1>Take Me Surfing</h1>
         <h2>Surfing locations around Ireland and Spain</h2>
         <a href="#learn-more" class="">Learn More</a>
       </header>
       <footer>
-        Open-sourced on
-        <a
-          href="https://github.com/barty-s/Craft-Project-SheCodesResponsive-AddOn"
-          target="_blank"
-          class=""
-          >GitHub</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More About Surfing</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.evo.com/guides/how-to-choose-a-surfboard"
+                  target="_blank"
+                  class=""
+                  >How to choose a surfboard</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.surfertoday.com/surfing/how-to-plan-a-surf-trip"
+                  target="_blank"
+                  class=""
+                  >Plan a surf trip</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.booksurfcamps.com/all/d/europe/ireland"
+                  target="_blank"
+                  class=""
+                  >Surf camps in Ireland</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi! My name is Sarah and I'm a huge water-sports fan. I'm from
+              Ireland but currently live in the north-west of Spain. Both
+              countries have lots to offer to surfers, sailors, wind-surfers and
+              kite-surfers.
+            </p>
+          </div>
+          <div>
+            <h3>About This Website</h3>
+            <p>
+              I created this page as part of the SheCodes Responsive Add-on
+              workshop. It's open-sourced on
+              <a
+                href="https://github.com/barty-s/Craft-Project-SheCodesResponsive-AddOn"
+                target="_blank"
+                class=""
+                >GitHub</a
+              >
+              and uses HTML and advanced CSS code.
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
