Added main section with grid

--- a/index.html
+++ b/index.html
@@ -21,10 +21,37 @@
         <h3>·passion·</h3>
         <h1>Take Me Surfing</h1>
         <h2>Surfing locations around Ireland and Spain</h2>
-        <a href="#learn-more" class="">Learn More</a>
+        <a href="#learn-more" class="" title="link to learn more section"
+          >Learn More</a
+        >
       </header>
+      <main>
+        <section class="grid grid-2-cols">
+          <div>
+            <img
+              src="images/surf-woman.jpg"
+              alt="image of woman surfing"
+              class="image-responsive"
+            />
+          </div>
+          <div>
+            <h2>Why surfing?</h2>
+            <h3>A fun and addictive sport</h3>
+            <p>
+              Surfing is a great sport for people of all ages, abilities and
+              styles. You might like to do tricks, like aerials, or get
+              barrelled inside a perfectly shaped wave. Or you might prefer to
+              hang-ten and cruise on a never-ending peeling wave on a long
+              board. It's a sport loved by many and, provided you have the right
+              kind of gear, can be practiced in any climate, from the cooler
+              Atlantic ocean to the balmy Mediterranean. Once you catch your
+              first wave, you'll be hooked!
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-cols-first-narrow">
           <div>
             <h3>More About Surfing</h3>
             <ul>
@@ -33,6 +60,7 @@
                   href="https://www.evo.com/guides/how-to-choose-a-surfboard"
                   target="_blank"
                   class=""
+                  title="link to how to choose a surfboard"
                   >How to choose a surfboard</a
                 >
               </li>
@@ -41,6 +69,7 @@
                   href="https://www.surfertoday.com/surfing/how-to-plan-a-surf-trip"
                   target="_blank"
                   class=""
+                  title="link to site to plan surf trip"
                   >Plan a surf trip</a
                 >
               </li>
@@ -49,6 +78,7 @@
                   href="https://www.booksurfcamps.com/all/d/europe/ireland"
                   target="_blank"
                   class=""
+                  title="link to surf camps in Ireland"
                   >Surf camps in Ireland</a
                 >
               </li>
@@ -72,6 +102,7 @@
                 href="https://github.com/barty-s/Craft-Project-SheCodesResponsive-AddOn"
                 target="_blank"
                 class=""
+                title="link to GitHub repository"
                 >GitHub</a
               >
               and uses HTML and advanced CSS code.
