Added card section with three beaches info

--- a/index.html
+++ b/index.html
@@ -49,6 +49,131 @@
             </p>
           </div>
         </section>
+        <section class="second-section">
+          <h2 class="text-center">·BEACHES·</h2>
+          <h3 class="text-center card-h3">
+            A few of my favourite surf locations
+          </h3>
+
+          <div class="grid grid-3-cols">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/beaches/banna beach.jpg"
+                  alt="Banna Beach, Kerry"
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Banna Beach, Kerry, Ireland</h4>
+                <p>
+                  An exposed sandbar break in the north of Co.Kerry, Ireland,
+                  Banna has decent conditions year-round, with the best time of
+                  year being during the spring. Wetsuits are a must, even in
+                  summer, as the water can be quite cold and there's usually a
+                  sea-breeze to add to the chill-factor. The waves at Banna are
+                  generally small to medium sized, perfect for
+                  beginner/intermediate surfers.
+                </p>
+                <h5>Location:</h5>
+                <p>embed google map here</p>
+                <h5>Why I love this beach:</h5>
+                <p>
+                  This was the beach where I first learned to surf, so it has a
+                  lot of fond memories for me! It's a beautiful long empty beach
+                  with never-ending dunes and gorgeous views of the mountians to
+                  the right.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.surf-forecast.com/breaks/Banna-Strand#:~:text=Banna%20Strand%20in%20Kerry%20is,angle%20is%20from%20the%20west."
+                  class="button-card"
+                  target="_blank"
+                  title="link to Banna beach conditions"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/beaches/la-lanzada-beach-sized.jpg"
+                  alt="La Lanzada Beach, Galicia"
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>La Lanzada Beach, Galicia, Spain</h4>
+                <p>
+                  This is an exposed beach and reef break with very good
+                  conditions through-out the year. The beach break provides both
+                  left and right-hand waves and the reef offers a nice
+                  left-hander. The great thing about this beach is that the surf
+                  isn't affected by the tide, making it a very accessible beach
+                  for surfers. The best conditions are in the winter time, so
+                  wrapping up well is a must!
+                </p>
+                <h5>Location:</h5>
+                <p>embed google map here</p>
+                <h5>Why I love this beach:</h5>
+                <p>
+                  A beautiful beach in a special location with amazing views,
+                  you can even see the island of Ons. It's not the easiest beach
+                  to reach, you need a car to access it, but that's what makes
+                  it great - it's never over-crowded.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.surf-forecast.com/breaks/Playade-Lanzada#:~:text=Playa%20de%20Lanzada%20in%20Galicia,shelter%20here%20from%20northwest%20winds."
+                  class="button-card"
+                  target="_blank"
+                  title="link to La Lanzada beach conditions"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/beaches/inch-beach-sized.jpg"
+                  alt="Inch Beach, Kerry"
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Inch Beach, Kerry, Ireland</h4>
+                <p>
+                  "Where an inch is a mile"! This beach stretches for 3
+                  kilometres. Another fairly exposed beach break, it has quite
+                  consistent surf. The best time of year for surfing at Inch is
+                  during the spring, espcially in April. It has both left and
+                  right-handers and is best at mid-tide. Another beach on the
+                  Atlantic, so bring along your neoprene booties, gloves and
+                  maybe a hood too, just in case!
+                </p>
+                <h5>Location:</h5>
+                <p>embed google map here</p>
+                <h5>Why I love this beach:</h5>
+                <p>
+                  Another beach I visited in my childhood, it feels like it goes
+                  on forever because you can't see the end of it! The surf here
+                  is so fun and the scenery from the water is breath-taking.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.surf-forecast.com/breaks/Inch-Strand"
+                  class="button-card"
+                  target="_blank"
+                  title="link to Inch beach conditions"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-cols-first-narrow">
