--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
                   beginner/intermediate surfers.
                 </p>
                 <h5>Location:</h5>
-                <p>embed google map here</p>
+                <p>
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13084.979426331041!2d-9.850431800144058!3d52.3391731715259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485ab463b5b6d3f7%3A0x138f121b8060681a!2sBanna%20Beach!5e0!3m2!1sen!2sie!4v1672845144311!5m2!1sen!2sie"
+                    class="embed-map"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    c:\Users\Rachel\AppData\Local\Programs\Microsoft
+                    VS
+                    Code\resources\app\out\vs\code\electron-sandbox\workbench\workbench.html
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </p>
                 <h5>Why I love this beach:</h5>
                 <p>
                   This was the beach where I first learned to surf, so it has a
@@ -115,7 +127,16 @@
                   wrapping up well is a must!
                 </p>
                 <h5>Location:</h5>
-                <p>embed google map here</p>
+                <p>
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23553.760380153988!2d-8.89400788739552!3d42.44433396758725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2f4173fbda830f%3A0x92b25f84830c6a4!2sPraia%20Da%20Lanzada!5e0!3m2!1sen!2sie!4v1672845215603!5m2!1sen!2sie"
+                    class="embed-map"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </p>
                 <h5>Why I love this beach:</h5>
                 <p>
                   A beautiful beach in a special location with amazing views,
@@ -154,7 +175,16 @@
                   maybe a hood too, just in case!
                 </p>
                 <h5>Location:</h5>
-                <p>embed google map here</p>
+                <p>
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19588.296966528236!2d-10.014828207724083!3d52.14274100180469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484550e64094c171%3A0x96365ac861c59343!2sArdroe%2C%20Inch%20Beach%2C%20Co.%20Kerry!5e0!3m2!1sen!2sie!4v1672844961555!5m2!1sen!2sie"
+                    class="embed-map"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </p>
                 <h5>Why I love this beach:</h5>
                 <p>
                   Another beach I visited in my childhood, it feels like it goes
