Corrected meta in index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     />
     <link rel="stylesheet" href="src/styles.css" class="rel" />
     <title>
-      Project for SheCodes Responsive - Craft around the World - Sarah Barter
+      Project for SheCodes Responsive - Surfing in Ireland and Spain - Sarah
+      Barter
     </title>
   </head>
   <body>
