Added HTML table element

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Roboto:wght@400;500&family=Source+Sans+Pro:ital,wght@0,300;0,400;1,200;1,300;1,400&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d1557c7a8f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/styles.css" class="rel" />
     <title>
       Project for SheCodes Responsive - Surfing in Ireland and Spain - Sarah
@@ -95,7 +99,7 @@
                 <p>
                   This was the beach where I first learned to surf, so it has a
                   lot of fond memories for me! It's a beautiful long empty beach
-                  with never-ending dunes and gorgeous views of the mountians to
+                  with never-ending dunes and gorgeous views of the mountains to
                   the right.
                 </p>
               </div>
@@ -168,7 +172,7 @@
               <div class="card-body">
                 <h4>Inch Beach, Co. Kerry, Ireland</h4>
                 <p>
-                  "Where an inch is a mile"! This beach stretches for 3
+                  "Where an inch is a mile!" This beach stretches for 3
                   kilometres. Another fairly exposed beach break, it has quite
                   consistent surf. The best time of year for surfing at Inch is
                   during the spring, espcially in April. It has both left and
@@ -1125,6 +1129,37 @@
               >
               and uses HTML and advanced CSS code.
             </p>
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <a
+                      href="https://www.instagram.com/barty_crouch/"
+                      title="link to Sarah Barter Instagram"
+                      target="_blank"
+                      ><i class="fa-brands fa-instagram"></i
+                    ></a>
+                  </td>
+                  <td>
+                    <a
+                      href="https://www.linkedin.com/in/sarah-barter-6383b196/"
+                      title="link to Sarah Barter LinkedIn"
+                      target="_blank"
+                      ><i class="fa-brands fa-linkedin"></i
+                    ></a>
+                  </td>
+                  <td>
+                    <a href="https://github.com/barty-s"
+                      ><i
+                        class="fa-brands fa-github"
+                        title="link to Sarah Barter GitHub repository"
+                        target="_blank"
+                      ></i
+                    ></a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </section>
       </footer>
